Creazione tasto privacy e aggiornamento pagina dashboard

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -36,8 +36,8 @@
   </ion-button>
   <ion-row>
     <div text-center>
-      If you don't have an account, please <a routerLink='/registrazione-utente'>
-        register</a> first!
+      Se non hai un account, per favore <a routerLink='/registrazione-utente'>
+        Clicca qui!</a> 
     </div>
   </ion-row>
   <ion-row>
