Gestione token post login

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -8,36 +8,31 @@
 </ion-header>
 
 <ion-content>
-
-  <ion-list>
-
-    <ion-item>
-      <ion-label position="floating">Email</ion-label>
-      <ion-input type="email" [(ngModel)]="model.email"
-        pattern="[A-Za-z0-9._%+-]{3,}@[a-zA-Z]{3,}([.]{1}[a-zA-Z]{2,}|[.]{1}[a-zA-Z]{2,}[.]{1}[a-zA-Z]{2,})"
-        maxlength="64" name="email" #email="ngModel" required></ion-input>
-    </ion-item>
-    <ion-list *ngIf="email.dirty && email.errors" lines="none">
-      <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
+  <form #form="ngForm" (ngSubmit)="processForm(form)" novalidate>
+    <ion-list>
+      <ion-item>
+        <ion-label position="floating">Nome utente o email</ion-label>
+        <ion-input type="username" [(ngModel)]="model.username" maxlength="64" name="username" #username="ngModel" required></ion-input>
+      </ion-item>
+      <ion-list *ngIf="username.dirty && username.errors" lines="none">
+        <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
+      </ion-list>
     </ion-list>
-  </ion-list>
-  <ion-list>
-    <ion-item>
-      <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" [(ngModel)]="model.password" maxlength="64" name="password" #password="ngModel"
-        required></ion-input>
-    </ion-item>
-    <ion-list *ngIf="password.dirty && password.errors" lines="none">
-      <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
+    <ion-list>
+      <ion-item>
+        <ion-label position="floating">Password</ion-label>
+        <ion-input type="password" [(ngModel)]="model.password" maxlength="64" name="password" #password="ngModel"
+          required></ion-input>
+      </ion-item>
+      <ion-list *ngIf="password.dirty && password.errors" lines="none">
+        <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
+      </ion-list>
     </ion-list>
-  </ion-list>
-  <ion-button size="default" (click)="processForm(form)">
-    LOGIN
-  </ion-button>
+    <ion-button size="default" (click)="processForm(form)">LOGIN</ion-button>
+  </form>
   <ion-row>
     <div text-center>
-      Se non hai un account, per favore <a routerLink='/registrazione-utente'>
-        Clicca qui!</a> 
+      Se non hai un account, per favore <a routerLink='/registrazione-utente'>Clicca qui!</a> 
     </div>
   </ion-row>
   <ion-row>
