--- a/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
+++ b/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
@@ -38,7 +38,7 @@
                 <ion-label *ngIf="misuraPh!=''">{{misuraPh}}</ion-label>
                 <ion-label *ngIf="misuraPh==''">n.v.</ion-label>
               </span>
-              <span class="parameterMin" style="">{{acquario.parameter.phMin}}<p style="font-size: 10px;margin-bottom: 2px;margin-top: -5px;">MIN</p></span>
+              <span class="parameterMin" style="margin-bottom:20px">{{acquario.parameter.phMin}}<p style="font-size: 10px;margin-bottom: 2px;margin-top: -5px;">MIN</p></span>
             </div>
           </ion-slide>
           <ion-slide *ngIf="acquario.parameter.ghMax!=-1 && acquario.parameter.ghMin!=-1" style="width: 100%;">
