--- a/src/app/pages/gestisci-acquario/gestisci-acquario.page.scss
+++ b/src/app/pages/gestisci-acquario/gestisci-acquario.page.scss
@@ -18,4 +18,4 @@
 .warning .parameterTitle {color: #ffae09;}
 .danger .parameterTitle {color: rgb(235 68 90);}
 
-.parameterContainer {float: left;margin: 10px 3px;border-radius: 10px;width:100%;}
+.parameterContainer {float: left;margin: 10px 3px;border-radius: 10px;width:100%;padding-bottom: 30px;}
