--- a/src/app/pages/splash/splash.page.html
+++ b/src/app/pages/splash/splash.page.html
@@ -7,21 +7,21 @@
       <!-- <img src="assets/img/logo1.png" /> -->
       Dashboard
     </ion-title>
-   </ion-toolbar>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <img src="assets/img/dashboard1.jpg" />
-  <div class="container-center" *ngIf="array_vasche.length == 0 || vascheservice.isLoading">
+  <div class="container-center" *ngIf="array_vasche.length == 0 || getVascheService().isLoading">
     <!-- Loading centrale -->
-    <ion-card class="align-item-center" *ngIf="vascheservice.isLoading">
+    <ion-card class="align-item-center" *ngIf="getVascheService().isLoading">
       <ion-card-header>
         <ion-spinner></ion-spinner>
       </ion-card-header>
       <ion-card-content> Carico i tuoi acquari </ion-card-content>
     </ion-card>
     <!-- Messaggio che non ci sono acquari -->
-    <ion-card color="danger" class="align-item-center" *ngIf="!vascheservice.isLoading">
+    <ion-card color="danger" class="align-item-center" *ngIf="!getVascheService().isLoading">
       <ion-card-header>
         <ion-card-subtitle>BENVENUTO IN MYAQUARIUM</ion-card-subtitle>
       </ion-card-header>
@@ -29,7 +29,7 @@
     </ion-card>
   </div>
 
-  <div class="container-center" *ngIf="array_vasche.length > 0 && !vascheservice.isLoading">
+  <div class="container-center" *ngIf="array_vasche.length > 0 && !getVascheService().isLoading">
     <!-- Tutte le vasche dell'utente -->
     <ion-card *ngFor="let vasca of array_vasche" (click)="vascaOnclick(vasca)">
       <div class="ion-activatable ripple-parent">
