--- a/src/app/pages/recupero-password/recupero-password.page.html
+++ b/src/app/pages/recupero-password/recupero-password.page.html
@@ -17,7 +17,10 @@
       <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
     </ion-list>
   </ion-list>
-  <ion-button size="default" (click)="processForm(form)">
+  <!-- <ion-button size="default" (click)="processForm(form)">
+    Invia
+  </ion-button> -->
+  <ion-button>
     Invia
   </ion-button>
 </ion-content>
