--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,19 @@
       <ion-content>
         <ion-list id="inbox-list">
           <ion-list-header>Bentornato</ion-list-header>
-          <ion-note>accountdiprova@gmail.com</ion-note>
+          <ion-note>{{ appstate.user?.username }}</ion-note>
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             <ion-item (click)="selectedIndex = i" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i" (click)="appstate.searchState = p.slug">
               <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
+          </ion-menu-toggle>
+          <ion-menu-toggle auto-hide="false" (click)="logout()">
+            <ion-item lines="none" detail="false">
+              <ion-icon slot="start" [ios]="'exit-outline'" [md]="'exit-sharp'" ></ion-icon>
+              <ion-label>Logout</ion-label>
+            </ion-item> 
           </ion-menu-toggle>
         </ion-list>
 
