--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -11,7 +11,7 @@
   <form #form="ngForm" (ngSubmit)="processForm(form)" novalidate>
     <ion-list>
       <ion-item>
-        <ion-label position="floating">Nome utente o email</ion-label>
+        <ion-label position="floating">Nome utente</ion-label>
         <ion-input type="username" [(ngModel)]="model.username" maxlength="64" name="username" #username="ngModel" required></ion-input>
       </ion-item>
       <ion-list *ngIf="username.dirty && username.errors" lines="none">
@@ -28,17 +28,27 @@
         <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
       </ion-list>
     </ion-list>
-    <ion-button size="default" (click)="processForm(form)">LOGIN</ion-button>
+    <ion-toolbar>
+      <ion-row >
+        <ion-col size="12" class="ion-text-center">
+          <ion-button size="default" expand="block" (click)="processForm(form)">LOGIN</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-toolbar>
+    
   </form>
-  <ion-row>
-    <div text-center>
-      Se non hai un account, per favore <a routerLink='/registrazione-utente'>Clicca qui!</a> 
-    </div>
-  </ion-row>
-  <ion-row>
+  <ion-item>
+    <ion-label>
+      <p class="item-paragraph-full">
+        Se non hai un account, per favore <a routerLink='/registrazione-utente'>Clicca qui!</a> 
+      </p>
+    </ion-label>
+  </ion-item> 
+  
+  <!--ion-row>
     <div text-center>
       <a routerLink='/recupero-password'>
         Password dimenticata?</a> 
     </div>
-  </ion-row>
+  </ion-row-->
 </ion-content>
