--- a/src/app/pages/aggiungi/aggiungi.page.html
+++ b/src/app/pages/aggiungi/aggiungi.page.html
@@ -26,7 +26,7 @@
   
 </ion-content>
 
-<ion-footer class="ion-no-border">
+<!--ion-footer class="ion-no-border">
   <ion-toolbar>
     <ion-row>
       <ion-col size="12" class="ion-text-center">
@@ -36,4 +36,4 @@
       </ion-col>
     </ion-row>
   </ion-toolbar>
-</ion-footer>
+</ion-footer-->
