--- a/src/app/pages/misure-acquario/misure-acquario.page.html
+++ b/src/app/pages/misure-acquario/misure-acquario.page.html
@@ -4,11 +4,11 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title style="text-align: center;">Misure acquario</ion-title>
-    <!--ion-buttons slot="end">
+    <!--<ion-buttons slot="end">
       <ion-button  (click)="saveMisura()" expand="block">
         <ion-icon size="large" color="success" name="add-outline"></ion-icon>
       </ion-button>
-    </ion-buttons-->
+    </ion-buttons>-->
   </ion-toolbar>
 </ion-header>
 
@@ -31,11 +31,11 @@
 
   
     <!--PH-->
-    <ion-card *ngIf="segment.value == 'PH'">
+    <!--<ion-card *ngIf="segment.value == 'PH'">
       <ion-card-content *ngIf="segment.value == 'PH'">
         <ion-item>
           <ion-icon name="alarm-outline"></ion-icon>
-          <ion-label style="margin-left: 10px;text-transform: uppercase;font-size: 14px;" lines="none">Pianifica misure PH</ion-label>
+        <ion-label style="margin-left: 10px;text-transform: uppercase;font-size: 14px;" lines="none">Pianifica misure PH</ion-label>
         </ion-item>
         <ion-item>
           <ion-label position="stacked">Data</ion-label>
@@ -58,6 +58,7 @@
 
       </ion-card-content>
     </ion-card>
+  -->
     <ion-card *ngIf="segment.value == 'PH'">
       <form #form="ngForm" (ngSubmit)="processForm(form)" novalidate>
         <ion-card-content>
@@ -102,7 +103,7 @@
     </ion-card>
 
     <!--GH-->
-    <ion-card *ngIf="segment.value == 'GH'">
+    <!--<ion-card *ngIf="segment.value == 'GH'">
       <ion-card-content>
         <ion-item>
           <ion-icon name="alarm-outline"></ion-icon>
@@ -129,6 +130,7 @@
 
       </ion-card-content>
     </ion-card>
+  -->
     <ion-card *ngIf="segment.value == 'GH'">
       <form #form="ngForm" (ngSubmit)="processForm(form)" novalidate>
         <ion-card-content>
@@ -179,7 +181,7 @@
     </ion-card>
     
     <!--KH-->
-    <ion-card *ngIf="segment.value == 'KH'">
+    <!--<ion-card *ngIf="segment.value == 'KH'">
       <ion-card-content>
         <ion-item>
           <ion-icon name="alarm-outline"></ion-icon>
@@ -206,6 +208,7 @@
 
       </ion-card-content>
     </ion-card>
+  -->
     <ion-card *ngIf="segment.value == 'KH'">
       <form #form="ngForm" (ngSubmit)="processForm(form)" novalidate> 
         <ion-card-content >
@@ -256,7 +259,7 @@
     </ion-card>
 
     <!--Temperatura-->
-    <ion-card *ngIf="segment.value == 'TEMPERATURA'">
+    <!--<ion-card *ngIf="segment.value == 'TEMPERATURA'">
       <ion-card-content>
         <ion-item>
           <ion-icon name="alarm-outline"></ion-icon>
@@ -283,6 +286,7 @@
 
       </ion-card-content>
     </ion-card>
+  -->
     <ion-card *ngIf="segment.value == 'TEMPERATURA'">
       <form #form="ngForm" (ngSubmit)="processForm(form)" novalidate> 
         <ion-card-content>
