--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="secondary">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
@@ -7,10 +7,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content color="secondary">
   <form #form="ngForm" (ngSubmit)="processForm(form)" novalidate>
     <ion-list>
-      <ion-item>
+      <ion-item color="secondary">
         <ion-label position="floating">Nome utente</ion-label>
         <ion-input type="username" [(ngModel)]="model.username" maxlength="64" name="username" #username="ngModel" required></ion-input>
       </ion-item>
@@ -19,7 +19,7 @@
       </ion-list>
     </ion-list>
     <ion-list>
-      <ion-item>
+      <ion-item color="secondary">
         <ion-label position="floating">Password</ion-label>
         <ion-input type="password" [(ngModel)]="model.password" maxlength="64" name="password" #password="ngModel"
           required></ion-input>
@@ -28,16 +28,16 @@
         <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
       </ion-list>
     </ion-list>
-    <ion-toolbar>
-      <ion-row >
+    <ion-toolbar color="secondary">
+      <ion-row>
         <ion-col size="12" class="ion-text-center">
-          <ion-button size="default" expand="block" (click)="processForm(form)">LOGIN</ion-button>
+          <ion-button color="light" size="default" expand="block" (click)="processForm(form)">LOGIN</ion-button>
         </ion-col>
       </ion-row>
     </ion-toolbar>
     
   </form>
-  <ion-item>
+  <ion-item color="secondary">
     <ion-label>
       <p class="item-paragraph-full">
         Se non hai un account, per favore <a routerLink='/registrazione-utente'>Clicca qui!</a> 
