logo login page

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -8,6 +8,9 @@
 </ion-header>
 
 <ion-content color="secondary">
+  <div class="logo">
+    <ion-img src="assets/img/logo-aquarium-clear.png"></ion-img>
+  </div>
   <form #form="ngForm" (ngSubmit)="processForm(form)" novalidate>
     <ion-list>
       <ion-item color="secondary">
