--- a/src/app/components/ricerca-accessori/ricerca-accessori.component.html
+++ b/src/app/components/ricerca-accessori/ricerca-accessori.component.html
@@ -1,4 +1,4 @@
-<ion-toolbar>
+<ion-toolbar color="primary">
     <ion-title class="ion-text-center"> Ricerca Accessori</ion-title>
 </ion-toolbar>
 <ion-searchbar></ion-searchbar>
