--- a/src/app/pages/nuovo-acquario/nuovo-acquario.page.html
+++ b/src/app/pages/nuovo-acquario/nuovo-acquario.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <!--ion-toolbar color="secondary"-->
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
@@ -66,8 +66,7 @@
     </ion-row>
     <ion-row *ngIf="editMode">
       <ion-col size="10" class="ion-text-center">
-        <ion-button expand="block" (click)="processForm(form)"
-          > Aggiorna il tuo acquario
+        <ion-button expand="block" (click)="processForm(form)"> Aggiorna il tuo acquario
         </ion-button>
       </ion-col>
       <ion-col size="2" class="ion-text-center">
