--- a/src/app/pages/registrazione-utente/registrazione-utente.page.html
+++ b/src/app/pages/registrazione-utente/registrazione-utente.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
@@ -123,7 +123,7 @@
 
       
       <ion-footer class="ion-no-border">
-        <ion-toolbar>
+        <ion-toolbar color="primary">
           <ion-row >
             <ion-col size="12" class="ion-text-center">
               <ion-button type="submit" expand="block" [disabled]="!form.valid" >
