--- a/src/app/pages/selezione-oggetto/selezione-oggetto.page.html
+++ b/src/app/pages/selezione-oggetto/selezione-oggetto.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
 
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
@@ -9,10 +9,10 @@
     
     <ion-buttons slot="end">
       <ion-button  *ngIf="getAppstate().canDelete" (click)="deleteVivo()" expand="block">
-        <ion-icon size="large" color="danger" name="trash-outline"></ion-icon>
+        <ion-icon size="large" color="light" name="trash-outline"></ion-icon>
       </ion-button>
       <ion-button *ngIf="getAppstate().canAdd" (click)="addVivo()" expand="block">
-        <ion-icon size="large" color="success" name="add-circle-outline"></ion-icon>
+        <ion-icon size="large" color="light" name="add-circle-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
 
