--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -35,7 +35,7 @@
     <!-- Tutte le vasche dell'utente -->
     <ion-card *ngFor="let vasca of array_vasche" (click)="vascaOnclick(vasca)">
       <div class="ion-activatable ripple-parent">
-        <ion-card-header style="padding-left: 10px;padding-right: 10px;padding-bottom: 5px;" color="secondary">
+        <ion-card-header style="padding-left: 10px;padding-right: 10px;padding-bottom: 5px;" color="primary">
           <ion-card-subtitle>{{vasca.nome}}</ion-card-subtitle>
         </ion-card-header>
         <ion-card-content class="ion-margin-top"> 
